# Ouroboros

./: .gitignore  CLAUDE.md  DATA_LOADING_GUIDE.md  DEBUG_GUIDE.md  GCS_DATALOADER_GUIDE.md  README.md  RUN_GUIDE.md  RUN_TRAINING.md  TPU_GUIDE.md  TechReport.md  analyze_velocity.py  commit_and_push.sh  compare_all_runs.py  compare_imagenet_runs.py  compare_training_logs.py  data_check.py  debug_caption_matching.py  debug_coyo_data.py  decode_latent_final.py  gcp_git_setup.sh  gcp_killall.sh  gcp_retrieve.sh  gcp_run.sh  gcp_show_log.sh  gcp_sync.sh  gcp_sync_and_train.sh  gcp_transfer.sh  inference.py  jax-hdm-test.ipynb  list_available_keys.py  load_with_pt_key10.py  loss.csv  loss_imagenet.csv  precompute_embeddings.py  precompute_embeddings_distributed.py  precompute_embeddings_tpu.py  precompute_imagenet_captions.py  precompute_imagenet_embeddings.py  progress_precompute_all.sh  pyproject.toml  (+27 more)
jax-hdm-main/: .gitignore  pyproject.toml
outputs/: embedding_debug.txt
outputs/decode_test/: raw_latent.npy
outputs/embedding_analysis/: Detail.md  imagenet_class_embeddings.npy  model.txt
scripts/: download_imagenet.sh
src/: __init__.py  embeddings.py
src/data/: __init__.py  gcs_dataloader.py  imagenet_loader.py  imagenet_parquet_loader.py
src/hdm/: callbacks.py  pipeline.py
src/xut/: xut.py  xut_small.py
tests/: conftest.py
tests/xut/: test_xut.py
wandb/: latest-run
wandb/run-20251202_225105-rpfiex42/: run-rpfiex42.wandb
wandb/run-20251202_225157-52u6tjcg/: run-52u6tjcg.wandb
wandb/run-20251202_225457-3pzy4hlb/: run-3pzy4hlb.wandb
(+40 files in other folders)
