[project]
name = "venv-jax"
version = "0.1.0"
description = "JAX implementation for HDM"
requires-python = ">=3.10,<3.13"
dependencies = [
    "jax[cuda12]",
    "flax",
    "optax",
    "chex",
    "Pillow",
    "PyYAML",
    "pytest",
    "ipykernel",
]

[tool.pytest.ini_options]
pythonpath = ["src"]